@@ -11783,6 +11783,11 @@ gtk_tree_view_search_position_func (GtkTreeView *tree_view,
   GdkWindow *tree_window = GTK_WIDGET (tree_view)->window;
   GdkScreen *screen = gdk_drawable_get_screen (tree_window);
   GtkRequisition requisition;
+  gint monitor_num;
+  GdkRectangle monitor;
+
+  monitor_num = gdk_screen_get_monitor_at_window (screen, tree_window);
+  gdk_screen_get_monitor_geometry (screen, monitor_num, &monitor);
 
   gtk_widget_realize (search_dialog);
 
